2009-11-28  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Call DownloadContext::setOwnerRequestGroup() in
	RequestGroup::setDownloadContext().
	* src/BtDependency.cc
	* src/RequestGroup.cc
	* src/RequestGroup.h
	* src/download_helper.cc
	* test/DefaultBtMessageDispatcherTest.cc
	* test/DefaultExtensionMessageFactoryTest.cc
	* test/HandshakeExtensionMessageTest.cc

2009-11-28  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Accept BitTorrent Magnet URI in Metalink resource type bittorrent.
	Rewritten UTMetadataPostDownloadHandler. To create torrent data
	from metadata, use new metadata2Torrent() function.
	* src/BtDependency.cc
	* src/UTMetadataPostDownloadHandler.cc
	* src/bittorrent_helper.cc
	* src/bittorrent_helper.h
	* test/BittorrentHelperTest.cc
	* test/BtDependencyTest.cc

2009-11-28  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Use createRequestGroupForUri to create the download for torrent
	file.
	* src/Metalink2RequestGroup.cc
	* test/Metalink2RequestGroupTest.cc

2009-11-28  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Fixed typo
	* src/DownloadContext.h

2009-11-28  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Use createRequestGroupForBitTorrent()
	* src/BtPostDownloadHandler.cc

2009-11-28  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Added remove().
	* src/Option.cc
	* src/Option.h

2009-11-28  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Removed options which is only valid for URIs specified in
	command-line.  If they are left, because op is used as a template
	for new RequestGroup(such as created in XML-RPC command,
	BtPostDownloadHandler etc), they causes unintentional effect.
	* src/main.cc

2009-11-28  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Refer to option value of PREF_OUT only in download_helper.
	* src/FtpNegotiationCommand.cc
	* src/HttpResponseCommand.cc

2009-11-27  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>
